# settlers

./: .gitignore  CMakeLists.txt  main.cpp  network.cpp  network.h  objects.cpp  objects.h  settlers.cpp  settlers.h  settlers.kdev4  trade_widget.cpp  trade_widget.h  ui.cpp  ui.h
